--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     }
   },
   "require": {
-    "laravel/framework": ">=5.1"
+    "laravel/framework": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.*"
   },
   "require-dev": {
     "orchestra/testbench": "~3.0"
